--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -2,52 +2,61 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 14,
       "id": "098b2971-5d7a-4d7f-aec2-3400a31a72b0",
       "metadata": {
         "id": "098b2971-5d7a-4d7f-aec2-3400a31a72b0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4071f31b-6945-4fd4-e161-44c6e8501e8b"
+        "outputId": "7df316d9-83b6-45b9-d5bd-35009b87d997"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/tmp/ipython-input-228930099.py:17: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
-            "  train_df = train_df.sort_values(\"Timestamp\").set_index(\"Timestamp\").asfreq(\"H\")\n"
+            "/tmp/ipython-input-655176934.py:25: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
+            "  train = train.sort_values(\"Timestamp\").set_index(\"Timestamp\").asfreq(\"H\")\n",
+            "/tmp/ipython-input-655176934.py:26: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
+            "  test  = test.sort_values(\"Timestamp\").set_index(\"Timestamp\").asfreq(\"H\")\n"
           ]
         }
       ],
       "source": [
         "# I chose the Exponential Smoothing (Holt-Winters) model\n",
         "\n",
-        "# assignment1.py  —— paste this whole file\n",
-        "\n",
-        "import pandas as pd\n",
+        "# assignment1.py  —— 只暴露三个变量：model, modelFit, pred\n",
         "import numpy as np\n",
+        "import pandas as pd\n",
         "from statsmodels.tsa.holtwinters import ExponentialSmoothing\n",
         "\n",
-        "# ---- 1) load train / test data from raw URLs (works in Colab AND GitHub Actions) ----\n",
-        "TRAIN_URL = \"https://raw.githubusercontent.com/dustywhite7/econ8310-assignment1/main/assignment_data_train.csv\"\n",
-        "TEST_URL  = \"https://raw.githubusercontent.com/dustywhite7/econ8310-assignment1/main/assignment_data_test.csv\"\n",
+        "# -------- 1) 读取本地训练/测试数据（相对路径，适配 GitHub Actions） --------\n",
+        "import os\n",
         "\n",
-        "train_df = pd.read_csv(TRAIN_URL, parse_dates=[\"Timestamp\"])\n",
-        "test_df  = pd.read_csv(TEST_URL,  parse_dates=[\"Timestamp\"])\n",
+        "# 默认先尝试本地路径（GitHub autograder 用）\n",
+        "TRAIN_PATH = \"assignment_data_train.csv\"\n",
+        "TEST_PATH  = \"assignment_data_test.csv\"\n",
         "\n",
-        "# sort + set hourly freq so statsmodels knows the frequency\n",
-        "train_df = train_df.sort_values(\"Timestamp\").set_index(\"Timestamp\").asfreq(\"H\")\n",
+        "# 如果本地不存在，就用 GitHub 原始链接（Colab 调试用）\n",
+        "if not os.path.exists(TRAIN_PATH):\n",
+        "    TRAIN_PATH = \"https://raw.githubusercontent.com/dustywhite7/econ8310-assignment1/main/assignment_data_train.csv\"\n",
+        "    TEST_PATH  = \"https://raw.githubusercontent.com/dustywhite7/econ8310-assignment1/main/assignment_data_test.csv\"\n",
         "\n",
-        "# numeric target with simple gap fill\n",
-        "y_train = (\n",
-        "    pd.to_numeric(train_df[\"trips\"], errors=\"coerce\")\n",
-        "    .astype(float)\n",
-        "    .interpolate(limit_direction=\"both\")\n",
+        "train = pd.read_csv(TRAIN_PATH, parse_dates=[\"Timestamp\"])\n",
+        "test  = pd.read_csv(TEST_PATH,  parse_dates=[\"Timestamp\"])\n",
+        "\n",
+        "\n",
+        "# 时间索引 + 小时频率；目标强制为数值并双向插值，避免初始化报错\n",
+        "train = train.sort_values(\"Timestamp\").set_index(\"Timestamp\").asfreq(\"H\")\n",
+        "test  = test.sort_values(\"Timestamp\").set_index(\"Timestamp\").asfreq(\"H\")\n",
+        "\n",
+        "y_train = pd.to_numeric(train[\"trips\"], errors=\"coerce\").interpolate(\n",
+        "    limit_direction=\"both\"\n",
         ")\n",
         "\n",
-        "# ---- 2) build the model object (do NOT call .fit() here) ----\n",
+        "# -------- 2) 定义模型（允许的类型：Holt-Winters / ExponentialSmoothing）--------\n",
+        "# 小时数据 → 24 小时季节；用加法趋势 + 加法季节；初始化用 estimated 以兼容缺失\n",
         "model = ExponentialSmoothing(\n",
         "    y_train,\n",
         "    trend=\"add\",\n",
@@ -56,15 +65,15 @@
         "    initialization_method=\"estimated\",\n",
         ")\n",
         "\n",
-        "# ---- 3) fit the model ----\n",
-        "modelFit = model.fit(optimized=True, use_brute=True)\n",
+        "# -------- 3) 拟合并预测 --------\n",
+        "# optimized=True 让 statsmodels 自动寻参；多数环境不需要 use_brute\n",
+        "modelFit = model.fit(optimized=True)\n",
         "\n",
-        "# ---- 4) forecast exactly len(test) steps and expose as 1-D Python floats ----\n",
-        "h = len(test_df)\n",
-        "_fc = modelFit.forecast(steps=h)\n",
+        "h = len(test)  # 期待 744\n",
+        "forecasts = modelFit.forecast(steps=h)\n",
         "\n",
-        "# IMPORTANT: make it a plain Python-list of floats, not numpy.float64\n",
-        "pred = list(map(float, np.asarray(_fc).ravel()))\n"
+        "# -------- 4) 产出一维数组/列表（通过 testValidPred）--------\n",
+        "pred = np.asarray(forecasts, dtype=float).ravel().tolist()\n"
       ]
     }
   ],
