--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -2,21 +2,21 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 16,
       "id": "098b2971-5d7a-4d7f-aec2-3400a31a72b0",
       "metadata": {
         "id": "098b2971-5d7a-4d7f-aec2-3400a31a72b0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "254f73b9-c052-4ea6-bcac-5a23ea771c13"
+        "outputId": "cf9d7f52-df6b-45c5-b0b5-c72ec5502f32"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/tmp/ipython-input-3963294197.py:21: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
+            "/tmp/ipython-input-687737544.py:17: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
             "  train = train.sort_values(\"Timestamp\").set_index(\"Timestamp\").asfreq(\"H\")\n"
           ]
         }
@@ -24,44 +24,43 @@
       "source": [
         "# I chose the Exponential Smoothing (Holt-Winters) model\n",
         "\n",
-        "import os\n",
+        "# assignment1.py  —— 放在仓库根目录\n",
+        "\n",
         "import numpy as np\n",
         "import pandas as pd\n",
-        "from statsmodels.tsa.holtwinters import ExponentialSmoothing as ES\n",
+        "from statsmodels.tsa.holtwinters import ExponentialSmoothing\n",
         "\n",
-        "# ---------- 1) 读入数据 ----------\n",
-        "TRAIN_PATH = \"assignment_data_train.csv\"\n",
-        "TEST_PATH  = \"assignment_data_test.csv\"\n",
+        "# 1) 用 RAW 链接读取（Actions 环境没有你的本地文件）\n",
+        "TRAIN_URL = \"https://raw.githubusercontent.com/dustywhite7/econ8310-assignment1/main/assignment_data_train.csv\"\n",
+        "TEST_URL  = \"https://raw.githubusercontent.com/dustywhite7/econ8310-assignment1/main/assignment_data_test.csv\"\n",
         "\n",
-        "# 本地优先（GitHub Actions 有这两个文件）；Colab 没文件就用 raw 链接\n",
-        "if not os.path.exists(TRAIN_PATH):\n",
-        "    TRAIN_PATH = \"https://raw.githubusercontent.com/dustywhite7/econ8310-assignment1/main/assignment_data_train.csv\"\n",
-        "    TEST_PATH  = \"https://raw.githubusercontent.com/dustywhite7/econ8310-assignment1/main/assignment_data_test.csv\"\n",
+        "# 2) 读数据并把时间设为小时频率索引\n",
+        "train = pd.read_csv(TRAIN_URL, parse_dates=[\"Timestamp\"])\n",
+        "test  = pd.read_csv(TEST_URL,  parse_dates=[\"Timestamp\"])\n",
         "\n",
-        "train = pd.read_csv(TRAIN_PATH, parse_dates=[\"Timestamp\"])\n",
-        "test  = pd.read_csv(TEST_PATH,  parse_dates=[\"Timestamp\"])\n",
-        "\n",
-        "# ---------- 2) 整理索引 & 目标列 ----------\n",
         "train = train.sort_values(\"Timestamp\").set_index(\"Timestamp\").asfreq(\"H\")\n",
+        "\n",
+        "# 3) 目标序列：转成数值并插值补齐\n",
         "y_train = pd.to_numeric(train[\"trips\"], errors=\"coerce\").interpolate(limit_direction=\"both\")\n",
         "\n",
-        "# ---------- 3) 建模（ETS：加性趋势 + 阻尼 + 加性季节，日内24小时季节性） ----------\n",
-        "model = ES(\n",
+        "# 4) 建模：Holt-Winters（加性趋势+加性季节，24 小时季节性）\n",
+        "model = ExponentialSmoothing(\n",
         "    y_train,\n",
         "    trend=\"add\",\n",
-        "    damped_trend=True,\n",
         "    seasonal=\"add\",\n",
         "    seasonal_periods=24,\n",
         "    initialization_method=\"estimated\",\n",
         ")\n",
         "\n",
-        "# 拟合\n",
-        "modelFit = model.fit(optimized=True)\n",
+        "# 5) 拟合\n",
+        "modelFit = model.fit(optimized=True, use_brute=True)\n",
         "\n",
-        "# ---------- 4) 预测 ----------\n",
-        "h = len(test)  # 应该是 744\n",
+        "# 6) 预测：和测试集等长（测试集有 744 行）\n",
+        "h = len(test)\n",
         "forecast = modelFit.forecast(steps=h)\n",
-        "pred = np.asarray(forecast).ravel()  # 1D 数组，长度 744，元素必须是数值\n"
+        "\n",
+        "# 7) 按测试要求输出：一维数值 numpy 数组（长度 744）\n",
+        "pred = np.asarray(forecast, dtype=float).ravel()\n"
       ]
     }
   ],
