--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -2,55 +2,72 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 17,
       "id": "098b2971-5d7a-4d7f-aec2-3400a31a72b0",
       "metadata": {
         "id": "098b2971-5d7a-4d7f-aec2-3400a31a72b0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cf9d7f52-df6b-45c5-b0b5-c72ec5502f32"
+        "outputId": "3055e5a4-9368-40e3-bd8f-891bd38218ec"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/tmp/ipython-input-687737544.py:17: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
-            "  train = train.sort_values(\"Timestamp\").set_index(\"Timestamp\").asfreq(\"H\")\n"
+            "/tmp/ipython-input-2811857382.py:15: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
+            "  train = train.sort_values(\"Timestamp\").set_index(\"Timestamp\").asfreq(\"H\")\n",
+            "/tmp/ipython-input-2811857382.py:34: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
+            "  test = test.sort_values(\"Timestamp\").set_index(\"Timestamp\").asfreq(\"H\")\n"
           ]
         }
       ],
       "source": [
         "# I chose the Exponential Smoothing (Holt-Winters) model\n",
         "\n",
-        "# assignment1.py  —— 放在仓库根目录\n",
+        "# assignment1.py\n",
         "\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "from statsmodels.tsa.holtwinters import ExponentialSmoothing\n",
         "\n",
-        "# 1) 用 RAW 链接读取（Actions 环境没有你的本地文件）\n",
-        "TRAIN_URL = \"https://raw.githubusercontent.com/dustywhite7/econ8310-assignment1/main/assignment_data_train.csv\"\n",
-        "TEST_URL  = \"https://raw.githubusercontent.com/dustywhite7/econ8310-assignment1/main/assignment_data_test.csv\"\n",
+        "# 读取数据\n",
+        "TRAIN_URL = \"https://github.com/dustywhite7/econ8310-assignment1/raw/main/assignment_data_train.csv\"\n",
+        "TEST_URL = \"https://github.com/dustywhite7/econ8310-assignment1/raw/main/assignment_data_test.csv\"\n",
         "\n",
-        "# 2) 读数据并把时间设为小时频率索引\n",
+        "# 读取训练数据\n",
         "train = pd.read_csv(TRAIN_URL, parse_dates=[\"Timestamp\"])\n",
-        "test  = pd.read_csv(TEST_URL,  parse_dates=[\"Timestamp\"])\n",
-        "\n",
         "train = train.sort_values(\"Timestamp\").set_index(\"Timestamp\").asfreq(\"H\")\n",
         "\n",
-        "# 3) 目标序列：转成数值并插值补齐\n",
-        "y_train = pd.to_numeric(train[\"trips\"], errors=\"coerce\").interpolate(limit_direction=\"both\")\n",
+        "# 处理目标变量 - 转换为数值并处理缺失值\n",
+        "y_train = pd.to_numeric(train[\"trips\"], errors=\"coerce\")\n",
+        "y_train = y_train.interpolate(method=\"time\", limit_direction=\"both\")\n",
         "\n",
-        "# 4) 建模：Holt-Winters（加性趋势+加性季节，24 小时季节性）\n",
+        "# 创建并拟合指数平滑模型\n",
         "model = ExponentialSmoothing(\n",
         "    y_train,\n",
         "    trend=\"add\",\n",
         "    seasonal=\"add\",\n",
-        "    seasonal_periods=24,\n",
-        "    initialization_method=\"estimated\",\n",
+        "    seasonal_periods=24*7,  # 每周季节性 (24小时*7天)\n",
+        "    initialization_method=\"estimated\"\n",
         ")\n",
+        "\n",
+        "modelFit = model.fit(optimized=True, use_brute=True)\n",
+        "\n",
+        "# 读取测试数据\n",
+        "test = pd.read_csv(TEST_URL, parse_dates=[\"Timestamp\"])\n",
+        "test = test.sort_values(\"Timestamp\").set_index(\"Timestamp\").asfreq(\"H\")\n",
+        "\n",
+        "# 生成预测 (744小时，即2019年1月)\n",
+        "h = len(test)\n",
+        "forecast = modelFit.forecast(steps=h)\n",
+        "\n",
+        "# 确保预测结果是长度为744的一维numpy数组\n",
+        "pred = np.asarray(forecast, dtype=float).ravel()\n",
+        "\n",
+        "# 确保预测结果没有负值（出租车行程数不能为负）\n",
+        "pred = np.maximum(pred, 0)\n",
         "\n",
         "# 5) 拟合\n",
         "modelFit = model.fit(optimized=True, use_brute=True)\n",
