--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -2,31 +2,59 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 19,
       "id": "098b2971-5d7a-4d7f-aec2-3400a31a72b0",
       "metadata": {
         "id": "098b2971-5d7a-4d7f-aec2-3400a31a72b0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3055e5a4-9368-40e3-bd8f-891bd38218ec"
+        "outputId": "1a7b696e-f8fa-4e26-f1e9-dd9563fce7d0"
       },
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: statsmodels in /usr/local/lib/python3.12/dist-packages (0.14.5)\n",
+            "Requirement already satisfied: numpy<3,>=1.22.3 in /usr/local/lib/python3.12/dist-packages (from statsmodels) (2.0.2)\n",
+            "Requirement already satisfied: scipy!=1.9.2,>=1.8 in /usr/local/lib/python3.12/dist-packages (from statsmodels) (1.16.1)\n",
+            "Requirement already satisfied: pandas!=2.1.0,>=1.4 in /usr/local/lib/python3.12/dist-packages (from statsmodels) (2.2.2)\n",
+            "Requirement already satisfied: patsy>=0.5.6 in /usr/local/lib/python3.12/dist-packages (from statsmodels) (1.0.1)\n",
+            "Requirement already satisfied: packaging>=21.3 in /usr/local/lib/python3.12/dist-packages (from statsmodels) (25.0)\n",
+            "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.12/dist-packages (from pandas!=2.1.0,>=1.4->statsmodels) (2.9.0.post0)\n",
+            "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.12/dist-packages (from pandas!=2.1.0,>=1.4->statsmodels) (2025.2)\n",
+            "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.12/dist-packages (from pandas!=2.1.0,>=1.4->statsmodels) (2025.2)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.12/dist-packages (from python-dateutil>=2.8.2->pandas!=2.1.0,>=1.4->statsmodels) (1.17.0)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/tmp/ipython-input-2811857382.py:15: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
-            "  train = train.sort_values(\"Timestamp\").set_index(\"Timestamp\").asfreq(\"H\")\n",
-            "/tmp/ipython-input-2811857382.py:34: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
-            "  test = test.sort_values(\"Timestamp\").set_index(\"Timestamp\").asfreq(\"H\")\n"
+            "/tmp/ipython-input-66607843.py:18: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
+            "  train = train.sort_values(\"Timestamp\").set_index(\"Timestamp\").asfreq(\"H\")\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "预测结果的前10个值: [ 5606.1097574   3577.85981238  2565.74546374  2151.00488427\n",
+            "  2202.56732959  2917.31114077  6568.02460355 10397.79786126\n",
+            " 12091.00078948 11466.7139307 ]\n",
+            "预测结果的长度: 744\n",
+            "预测结果的类型: <class 'numpy.ndarray'>\n"
           ]
         }
       ],
       "source": [
         "# I chose the Exponential Smoothing (Holt-Winters) model\n",
         "\n",
-        "# assignment1.py\n",
+        "# assignment1.py - Google Colab版本\n",
+        "\n",
+        "# 首先安装必要的库\n",
+        "!pip install statsmodels\n",
         "\n",
         "import numpy as np\n",
         "import pandas as pd\n",
@@ -44,40 +72,36 @@
         "y_train = pd.to_numeric(train[\"trips\"], errors=\"coerce\")\n",
         "y_train = y_train.interpolate(method=\"time\", limit_direction=\"both\")\n",
         "\n",
-        "# 创建并拟合指数平滑模型\n",
+        "# 创建指数平滑模型 (确保model变量是未拟合的模型)\n",
         "model = ExponentialSmoothing(\n",
         "    y_train,\n",
         "    trend=\"add\",\n",
         "    seasonal=\"add\",\n",
-        "    seasonal_periods=24*7,  # 每周季节性 (24小时*7天)\n",
+        "    seasonal_periods=24,  # 使用24小时作为季节性周期\n",
         "    initialization_method=\"estimated\"\n",
         ")\n",
         "\n",
+        "# 拟合模型 (确保modelFit变量是拟合后的模型)\n",
         "modelFit = model.fit(optimized=True, use_brute=True)\n",
         "\n",
         "# 读取测试数据\n",
         "test = pd.read_csv(TEST_URL, parse_dates=[\"Timestamp\"])\n",
-        "test = test.sort_values(\"Timestamp\").set_index(\"Timestamp\").asfreq(\"H\")\n",
         "\n",
         "# 生成预测 (744小时，即2019年1月)\n",
         "h = len(test)\n",
         "forecast = modelFit.forecast(steps=h)\n",
         "\n",
         "# 确保预测结果是长度为744的一维numpy数组\n",
+        "# 使用ravel()确保是一维数组，并转换为浮点数类型\n",
         "pred = np.asarray(forecast, dtype=float).ravel()\n",
         "\n",
         "# 确保预测结果没有负值（出租车行程数不能为负）\n",
         "pred = np.maximum(pred, 0)\n",
         "\n",
-        "# 5) 拟合\n",
-        "modelFit = model.fit(optimized=True, use_brute=True)\n",
-        "\n",
-        "# 6) 预测：和测试集等长（测试集有 744 行）\n",
-        "h = len(test)\n",
-        "forecast = modelFit.forecast(steps=h)\n",
-        "\n",
-        "# 7) 按测试要求输出：一维数值 numpy 数组（长度 744）\n",
-        "pred = np.asarray(forecast, dtype=float).ravel()\n"
+        "# 输出预测结果的前10个值以供检查\n",
+        "print(\"预测结果的前10个值:\", pred[:10])\n",
+        "print(\"预测结果的长度:\", len(pred))\n",
+        "print(\"预测结果的类型:\", type(pred))"
       ]
     }
   ],
