--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -2,14 +2,14 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 1,
       "id": "098b2971-5d7a-4d7f-aec2-3400a31a72b0",
       "metadata": {
         "id": "098b2971-5d7a-4d7f-aec2-3400a31a72b0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1a7b696e-f8fa-4e26-f1e9-dd9563fce7d0"
+        "outputId": "e8647b83-32c4-4a7a-8995-506004dcf516"
       },
       "outputs": [
         {
@@ -32,7 +32,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/tmp/ipython-input-66607843.py:18: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
+            "/tmp/ipython-input-643965348.py:18: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
             "  train = train.sort_values(\"Timestamp\").set_index(\"Timestamp\").asfreq(\"H\")\n"
           ]
         },
@@ -40,68 +40,67 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "预测结果的前10个值: [ 5606.1097574   3577.85981238  2565.74546374  2151.00488427\n",
+            "First 10 predicted values: [ 5606.1097574   3577.85981238  2565.74546374  2151.00488427\n",
             "  2202.56732959  2917.31114077  6568.02460355 10397.79786126\n",
             " 12091.00078948 11466.7139307 ]\n",
-            "预测结果的长度: 744\n",
-            "预测结果的类型: <class 'numpy.ndarray'>\n"
+            "Prediction array length: 744\n",
+            "Prediction array type: <class 'numpy.ndarray'>\n"
           ]
         }
       ],
       "source": [
         "# I chose the Exponential Smoothing (Holt-Winters) model\n",
         "\n",
-        "# assignment1.py - Google Colab版本\n",
+        "# assignment1.py - Google Colab Version\n",
         "\n",
-        "# 首先安装必要的库\n",
+        "# Install required libraries\n",
         "!pip install statsmodels\n",
         "\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "from statsmodels.tsa.holtwinters import ExponentialSmoothing\n",
         "\n",
-        "# 读取数据\n",
+        "# Read data from URLs\n",
         "TRAIN_URL = \"https://github.com/dustywhite7/econ8310-assignment1/raw/main/assignment_data_train.csv\"\n",
         "TEST_URL = \"https://github.com/dustywhite7/econ8310-assignment1/raw/main/assignment_data_test.csv\"\n",
         "\n",
-        "# 读取训练数据\n",
+        "# Read and preprocess training data\n",
         "train = pd.read_csv(TRAIN_URL, parse_dates=[\"Timestamp\"])\n",
         "train = train.sort_values(\"Timestamp\").set_index(\"Timestamp\").asfreq(\"H\")\n",
         "\n",
-        "# 处理目标变量 - 转换为数值并处理缺失值\n",
+        "# Process target variable - convert to numeric and handle missing values\n",
         "y_train = pd.to_numeric(train[\"trips\"], errors=\"coerce\")\n",
         "y_train = y_train.interpolate(method=\"time\", limit_direction=\"both\")\n",
         "\n",
-        "# 创建指数平滑模型 (确保model变量是未拟合的模型)\n",
+        "# Create Exponential Smoothing model (ensure model variable is unfitted)\n",
         "model = ExponentialSmoothing(\n",
         "    y_train,\n",
         "    trend=\"add\",\n",
         "    seasonal=\"add\",\n",
-        "    seasonal_periods=24,  # 使用24小时作为季节性周期\n",
+        "    seasonal_periods=24,  # Use 24-hour seasonal cycle\n",
         "    initialization_method=\"estimated\"\n",
         ")\n",
         "\n",
-        "# 拟合模型 (确保modelFit变量是拟合后的模型)\n",
+        "# Fit the model (ensure modelFit variable is the fitted model)\n",
         "modelFit = model.fit(optimized=True, use_brute=True)\n",
         "\n",
-        "# 读取测试数据\n",
+        "# Read test data\n",
         "test = pd.read_csv(TEST_URL, parse_dates=[\"Timestamp\"])\n",
         "\n",
-        "# 生成预测 (744小时，即2019年1月)\n",
+        "# Generate forecast (744 hours, for January 2019)\n",
         "h = len(test)\n",
         "forecast = modelFit.forecast(steps=h)\n",
         "\n",
-        "# 确保预测结果是长度为744的一维numpy数组\n",
-        "# 使用ravel()确保是一维数组，并转换为浮点数类型\n",
+        "# Ensure predictions are a 1D numpy array of length 744 with float type\n",
         "pred = np.asarray(forecast, dtype=float).ravel()\n",
         "\n",
-        "# 确保预测结果没有负值（出租车行程数不能为负）\n",
+        "# Ensure predictions are non-negative (taxi trips can't be negative)\n",
         "pred = np.maximum(pred, 0)\n",
         "\n",
-        "# 输出预测结果的前10个值以供检查\n",
-        "print(\"预测结果的前10个值:\", pred[:10])\n",
-        "print(\"预测结果的长度:\", len(pred))\n",
-        "print(\"预测结果的类型:\", type(pred))"
+        "# Output first 10 values for verification\n",
+        "print(\"First 10 predicted values:\", pred[:10])\n",
+        "print(\"Prediction array length:\", len(pred))\n",
+        "print(\"Prediction array type:\", type(pred))"
       ]
     }
   ],
