--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -2,85 +2,76 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "id": "098b2971-5d7a-4d7f-aec2-3400a31a72b0",
       "metadata": {
         "id": "098b2971-5d7a-4d7f-aec2-3400a31a72b0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "94b11a31-2bf5-41a3-aa2c-3f78132956d6"
+        "outputId": "c634fe38-0e9d-413e-b849-25fce4404cbf"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/tmp/ipython-input-2988366806.py:15: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
+            "/tmp/ipython-input-241475881.py:24: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
             "  train_df = train_df.sort_values(\"Timestamp\").set_index(\"Timestamp\").asfreq(\"H\")\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Prediction length: 744\n",
-            "Prediction type: <class 'numpy.ndarray'>\n",
-            "First few values: [5606.1097574  3577.85981238 2565.74546374 2151.00488427 2202.56732959]\n"
           ]
         }
       ],
       "source": [
         "# I chose the Exponential Smoothing (Holt-Winters) model\n",
         "\n",
-        "# assignment1.py - Exponential Smoothing Solution\n",
+        "# assignment1.py — Exponential Smoothing solution for autograder\n",
         "\n",
+        "import os\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "from statsmodels.tsa.holtwinters import ExponentialSmoothing\n",
         "\n",
-        "# Read data from the provided URLs\n",
-        "TRAIN_URL = \"https://github.com/dustywhite7/econ8310-assignment1/raw/main/assignment_data_train.csv\"\n",
-        "TEST_URL = \"https://github.com/dustywhite7/econ8310-assignment1/raw/main/assignment_data_test.csv\"\n",
+        "# ---------- data locations ----------\n",
+        "TRAIN_LOCAL = \"assignment_data_train.csv\"\n",
+        "TEST_LOCAL  = \"assignment_data_test.csv\"\n",
+        "TRAIN_URL   = \"https://raw.githubusercontent.com/dustywhite7/econ8310-assignment1/main/assignment_data_train.csv\"\n",
+        "TEST_URL    = \"https://raw.githubusercontent.com/dustywhite7/econ8310-assignment1/main/assignment_data_test.csv\"\n",
         "\n",
-        "# Load and preprocess the training data\n",
-        "train_df = pd.read_csv(TRAIN_URL, parse_dates=[\"Timestamp\"])\n",
+        "def _read_csv_safe(local_path: str, fallback_url: str) -> pd.DataFrame:\n",
+        "    \"\"\"Read from local file if it exists (for the grader); otherwise from the URL (for Colab).\"\"\"\n",
+        "    path = local_path if os.path.exists(local_path) else fallback_url\n",
+        "    return pd.read_csv(path, parse_dates=[\"Timestamp\"])\n",
+        "\n",
+        "# ---------- load & preprocess training ----------\n",
+        "train_df = _read_csv_safe(TRAIN_LOCAL, TRAIN_URL)\n",
+        "\n",
         "train_df = train_df.sort_values(\"Timestamp\").set_index(\"Timestamp\").asfreq(\"H\")\n",
         "\n",
-        "# Process the target variable - handle any data issues\n",
+        "\n",
         "y_train = pd.to_numeric(train_df[\"trips\"], errors=\"coerce\")\n",
-        "# Fill any remaining missing values using time-based interpolation\n",
         "y_train = y_train.interpolate(method=\"time\", limit_direction=\"both\")\n",
         "\n",
-        "# Create the Exponential Smoothing model (unfitted)\n",
-        "# Using additive seasonality with 24-hour period\n",
+        "# ---------- build unfitted model\n",
         "model = ExponentialSmoothing(\n",
         "    y_train,\n",
         "    trend=\"add\",\n",
         "    seasonal=\"add\",\n",
         "    seasonal_periods=24,\n",
-        "    initialization_method=\"estimated\"\n",
+        "    initialization_method=\"estimated\",\n",
         ")\n",
         "\n",
-        "# Fit the model to the training data\n",
-        "modelFit = model.fit(optimized=True, use_brute=True)\n",
+        "# ---------- fit ----------\n",
+        "modelFit = model.fit(optimized=True, use_brute=True)  # tests会检查是 HoltWintersResultsWrapper\n",
         "\n",
-        "# Load the test data\n",
-        "test_df = pd.read_csv(TEST_URL, parse_dates=[\"Timestamp\"])\n",
-        "\n",
-        "# Generate forecasts for the test period (744 hours for January 2019)\n",
+        "# ---------- load test & forecast ----------\n",
+        "test_df = _read_csv_safe(TEST_LOCAL, TEST_URL)\n",
         "h = len(test_df)\n",
         "forecast = modelFit.forecast(steps=h)\n",
         "\n",
-        "# Ensure predictions are in the correct format for the autograder\n",
-        "# Convert to numpy array, ensure it's 1D, and ensure no negative values\n",
-        "pred = np.asarray(forecast, dtype=float).ravel()\n",
-        "pred = np.maximum(pred, 0)  # Ensure no negative values\n",
+        "# ---------- predictions for the grader ----------\n",
         "\n",
-        "# For debugging: check the output format\n",
-        "print(f\"Prediction length: {len(pred)}\")\n",
-        "print(f\"Prediction type: {type(pred)}\")\n",
-        "print(f\"First few values: {pred[:5]}\")"
+        "pred = np.asarray(forecast, dtype=float).ravel()\n",
+        "pred = np.maximum(pred, 0.0)\n"
       ]
     }
   ],
