--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -2,21 +2,21 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "id": "098b2971-5d7a-4d7f-aec2-3400a31a72b0",
       "metadata": {
         "id": "098b2971-5d7a-4d7f-aec2-3400a31a72b0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c634fe38-0e9d-413e-b849-25fce4404cbf"
+        "outputId": "4be7ea2b-1eec-4ec8-97ce-b771a6138b67"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/tmp/ipython-input-241475881.py:24: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
+            "/tmp/ipython-input-3346509209.py:27: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
             "  train_df = train_df.sort_values(\"Timestamp\").set_index(\"Timestamp\").asfreq(\"H\")\n"
           ]
         }
@@ -24,7 +24,7 @@
       "source": [
         "# I chose the Exponential Smoothing (Holt-Winters) model\n",
         "\n",
-        "# assignment1.py — Exponential Smoothing solution for autograder\n",
+        "# assignment1.py — Exponential Smoothing solution for the autograder\n",
         "\n",
         "import os\n",
         "import numpy as np\n",
@@ -38,20 +38,23 @@
         "TEST_URL    = \"https://raw.githubusercontent.com/dustywhite7/econ8310-assignment1/main/assignment_data_test.csv\"\n",
         "\n",
         "def _read_csv_safe(local_path: str, fallback_url: str) -> pd.DataFrame:\n",
-        "    \"\"\"Read from local file if it exists (for the grader); otherwise from the URL (for Colab).\"\"\"\n",
+        "    \"\"\"\n",
+        "    Read from local file if it exists (this is how the grader runs).\n",
+        "    If not found (e.g., on Colab), fall back to the provided URL.\n",
+        "    \"\"\"\n",
         "    path = local_path if os.path.exists(local_path) else fallback_url\n",
         "    return pd.read_csv(path, parse_dates=[\"Timestamp\"])\n",
         "\n",
         "# ---------- load & preprocess training ----------\n",
         "train_df = _read_csv_safe(TRAIN_LOCAL, TRAIN_URL)\n",
-        "\n",
+        "# Ensure chronological hourly index\n",
         "train_df = train_df.sort_values(\"Timestamp\").set_index(\"Timestamp\").asfreq(\"H\")\n",
         "\n",
-        "\n",
+        "# Target cleaning: numeric + time interpolation to fill gaps\n",
         "y_train = pd.to_numeric(train_df[\"trips\"], errors=\"coerce\")\n",
         "y_train = y_train.interpolate(method=\"time\", limit_direction=\"both\")\n",
         "\n",
-        "# ---------- build unfitted model\n",
+        "# ---------- build (unfitted) model ----------\n",
         "model = ExponentialSmoothing(\n",
         "    y_train,\n",
         "    trend=\"add\",\n",
@@ -61,17 +64,16 @@
         ")\n",
         "\n",
         "# ---------- fit ----------\n",
-        "modelFit = model.fit(optimized=True, use_brute=True)  # tests会检查是 HoltWintersResultsWrapper\n",
+        "modelFit = model.fit(optimized=True, use_brute=True)\n",
         "\n",
-        "# ---------- load test & forecast ----------\n",
+        "# ---------- test horizon & forecast ----------\n",
         "test_df = _read_csv_safe(TEST_LOCAL, TEST_URL)\n",
-        "h = len(test_df)\n",
+        "h = len(test_df)                      # should be 744 hours for Jan 2019\n",
         "forecast = modelFit.forecast(steps=h)\n",
         "\n",
         "# ---------- predictions for the grader ----------\n",
-        "\n",
         "pred = np.asarray(forecast, dtype=float).ravel()\n",
-        "pred = np.maximum(pred, 0.0)\n"
+        "pred = np.maximum(pred, 0.0)          # avoid negatives\n"
       ]
     }
   ],
